<resources>
    <string name="app_name">Faunanimal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enviogratis">ENVIO GRATIS A PARTIR DE 39 €</string>
    <string name="yasoy">Ya soy cliente de Faunanimal</string>
    <string name="siusted">Si usted tiene una cuenta de Faunanumal, por favor acceda.</string>
    <string name="direccionemail">Dirección de email:</string>
    <string name="pass">Contraseña:</string>
    <string name="hintemail">Email</string>
    <string name="hintpass">Contraseña</string>
    <string name="iniciarsesion">Iniciar sesión</string>
    <string name="olvpass">¿Olvidaste la contraseña?</string>
    <string name="nosoy">No soy cliente de Faunanimal</string>
    <string name="siustedno">Si usted no tiene una cuenta de Faunanimal, por favor registrese.</string>
    <string name="registro">Registrarse</string>
    <string name="search">Busqueda</string>
    <string name="cart">Carrito de compras</string>
    <string name="fav">Favoritos</string>
    <string name="chat">Chat</string>
    <string name="peces">Peces</string>
    <string name="reptiles">Reptiles</string>
    <string name="pajaros">Pajaros</string>
    <string name="roedores">Roedores</string>
    <string name="gatos">Gatos</string>
    <string name="perros">Perros</string>
    <string name="registrate">Regístrate</string>
    <string name="registrarse">Registrarse</string>
    <string name="cuentausuario">Cuenta Usuario</string>
    <string name="finalizarcompra">Finalizar Compra</string>
    <string name="nombre">Nombre:</string>
    <string name="provincia">Provincia:</string>
    <string name="ciudad">Ciudad:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="acepto">Acepto los Términos y condiciones y la politica de privacidad de Faunanimal</string>
    <string name="megustaria">Me gustaría recibir descuentos exclusivos y las ultimas novedades por email.</string>
    <string name="info">¿Tienes una pregunta acerca de tu pedido? Télefono gratuito de Atencion al Cliente : 609 65 60 18</string>
    <string name="borrarresultado">Borrar Resultados</string>
    <string name="direccion">Dirección:</string>
    <string name="direccionsinpuntos">Dirección</string>
    <string name="enviopago">Envio - Pago</string>
    <string name="confirmar">Confirmar</string>
    <string name="direcciondefacturacion">Dirección de Facturación</string>
    <string name="telefono">Teléfono:</string>
    <string name="codigopostal">Codigo Postal:</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="metododeenvio">Método de envío</string>
    <string name="metododepago">Método de pago</string>
    <string name="envioen">Envio en 24/72 (horas)</string>
    <string name="solotefaltan">Sólo te faltan 34,01 € para tener envio gratis</string>
    <string name="tarjeta">Pagar con Tarjeta</string>
    <string name="paypal">Pagar con Paypal</string>
    <string name="transbancaria">Transferencia Bancaria</string>
    <string name="revisarpedido">Revisar Pedido</string>
    <string name="comentarios">Comentarios:</string>
    <string name="heleido">He leido y estoy de acuerdo con los Términos y condiciones y la Politica de Privacidad</string>
    <string name="nodatos">No se han encontrado datos, Revise conexion a internet y vuelva a cargar la ventana</string>
    <string name="anadiralcarrito">AÑADIR AL CARRITO</string>
    <string name="eligetamano">Elige tamaño:</string>
    <string name="ivaincluido">IVA incluido</string>
    <string name="cantidad">Cantidad:</string>
    <string name="descripcion">Descripción de producto</string>
    <string name="medidas">Medidas</string>
    <string name="envio">Envio</string>
    <string name="metodosdepago">Métodos de pago</string>
    <string name="valoraciones">Valoraciones</string>
    <string name="envio399">Envio 3,99 €</string>
    <string name="gastosfijos">Gastos de envío fijos de 3,99€</string>
    <string name="infotarjeta">Paga con tu tarjeta en la pasarela del banco mediante una transacción 100% segura</string>
    <string name="infopaypal">Será redirigido a la página web de PayPal cuando finalize el pedido.</string>
    <string name="infotransferenciabancaria">Banco: Sabadell IBAN: ES96 0081 1011 9800 0109 5517 Beneficiario: PANDA VENTURES S.L. SWIFT: BSABESBB Concepto: Indica el número de pedido. Puedes agilizar la gestión de tu pedido, enviando el justificante a info@faunanimal.com</string>
    <string name="precio">Precio:</string>
    <string name="min">mín.</string>
    <string name="max">máx.</string>
    <string name="ofertas">Ofertas:</string>
    <string name="envio_gratis">Envio Gratis:</string>
    <string name="aplicar">Aplicar</string>
    <string name="restablecer">Restablecer</string>
    <string name="tvverterminosycondiciones"><u>Ver Terminos Y Condiciones</u></string>
    <string name="tvverterminosycondicionesypoliticadeprivacidad"><u>Ver Terminos Y Condiciones y Politica de privacidad</u></string>
    <string name="terminosycondiciones"><b>POLITICA DE PRIVACIDAD</b> Esta página Web, es propiedad de Panda Ventures, S.L., en adelante "FaunAnimal".
Su contenido está protegido por la legislación vigente de propiedad intelectual, quedando expresamente prohibida su reproducción (total o parcial), copia o almacenamiento sin autorización expresa y por escrito de FaunAnimal.
FaunAnimal no asume responsabilidad alguna derivada de la información de esta Web y se reserva el derecho exclusivo de modificar y/o suprimir a su arbitrio y sin previo aviso, la información contenida en ella.
FaunAnimal, informa a sus usuarios que los datos personales que nos proporcionan formarán parte de un fichero informatizado que ha sido creado y mantenido bajo la responsabilidad de FaunAnimal domiciliado en Av. Juan Gil Albert Nº 1, 03804 Alcoy (Alicante).
La única finalidad de este fichero es la tramitación de la información que solicite el usuario.
Para dar cumplimiento con lo establecido en la Ley Orgánica 15/1999, de 13 de diciembre, de Protección de Datos de Carácter Personal le informamos que sus datos personales quedarán incorporados y serán tratados única y exclusivamente por FaunAnimal, con el fin de poderle prestar y ofrecer nuestros servicios.
El usuario puede ejercer sus derechos de acceso, rectificación, oposición y cancelación al tratamiento de sus datos personales, en los términos y condiciones previstos en la Ley Orgánica 15/1999, de 13 de diciembre, de Protección de Datos de Carácter Personal. Si el usuario decide darse de baja, sus datos serán totalmente cancelados. Estos derechos pueden hacerse efectivos, de forma ágil y gratuita, mediante el envío de correo electrónico a la dirección info@faunanimal.com. Asimismo, en caso de problemas para la realización efectiva on-line, así como para cualquier tipo de duda respecto a nuestra política de privacidad de datos, el usuario puede ponerse en contacto con nosotros mediante el envío de correo electrónico a la dirección info@faunanimal.com .

Panda Ventures, S.L.: NIF/CIF B-54850086
Inscrita en el Registro: Hoja A- 144752 Tomo 3854 Folio 71</string>
    <string name="envioprecio">Envio 3.99 €</string>
    <string name="telefono_info"> Teléfono / Whatsapp :</string>
    <string name="numero_info"> 609 65 60 18</string>
    <string name="email_info"> <u>info@faunanimal@.com</u></string>
    <string name="atencion_info"> Atención al cliente :</string>
    <string name="blog_info"> Blog :</string>
    <string name="horario_info"> Lunes-Viernes  \n de 9:00h - 14:00h y de 15:00h - 18:30h</string>
    <string name="direccion_blog_info"><u>faunanimal.com/blog/</u></string>
    <string name="siguenos_info">Síguenos</string>
    <string name="direccion_info_ofi">Avenida Juan Gil Albert 1  \n Planta 6 Oficina 5  \n 03804 Alcoy, Alicante</string>
</resources>