<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/telefono_info"
        android:id="@+id/tv_telefono_whatsapp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/numero_info"
        android:id="@+id/tv_numero"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/direccionemail"
        android:id="@+id/tv_direccion_email"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email_info"
        android:id="@+id/tv_email"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/atencion_info"
        android:id="@+id/tv_atencion"
        android:layout_gravity="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/horario_info"
        android:id="@+id/tv_horario"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAlignment="center"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/blog_info"
        android:id="@+id/tv_blog"
        android:layout_gravity="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/direccion_blog_info"
        android:id="@+id/tv_blog_dir"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/direccion"
        android:id="@+id/tv_direccion"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/direccion_info_ofi"
        android:id="@+id/tv_direccion_ofi"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/siguenos_info"
        android:id="@+id/tv_siguenos"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginBottom="15dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:id="@+id/imgbtn_facebook"
            android:src="@drawable/ico_facebook" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgbtn_twitter"
            android:background="@null"

            android:src="@drawable/ico_twitter" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgbtn_pinterest"
            android:background="@null"

            android:src="@drawable/ico_pinterest" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgbtn_instagram"
            android:background="@null"

            android:src="@drawable/ico_instagram" />
    </LinearLayout>

</LinearLayout>